Address test resources reuse quality gate